Moved auto input file to allow for multiple lists

--- a/auto lists/globex_euro.ini
+++ b/auto lists/globex_euro.ini
@@ -1,74 +1,89 @@
 [glo_da_xf]
+database_name = DAF XF 105
 make = daf
 model = xf
 cabins = (super_s_cab,s_cab_plus,space_cab)
 
 [glo_da_eur6]
+database_name = DAF XF Euro 6
 make = daf
 model = xf_euro6
 cabins = (superspace,space_spoiler,space)
 
 [glo_mb_ac09]
+database_name = Mercedes Benz Actros
 make = mercedes
 model = actros
 cabins = (megaspace,cabin_l,cabin_l_lw)
 
 [glo_mb_ac14]
-mercedes
+database_name = Mercedes Benz New Actros
+make = mercedes
 model = actros2014
 cabins = (gigaspace,bigspace,streamspace)
 
 [glo_vo_fh09]
+database_name = Volvo FH16 2009
 make = volvo
 model = fh16
 cabins = (l2h3,l2h2,l2h1)
 
 [glo_vo_fh12]
+database_name = Volvo FH15 2012
 make = volvo
 model = fh16_2012
 cabins = (l2h3,l2h2,l2h1)
 
 [glo_re_prem]
+database_name = Renault Premium
 make = renault
 model = premium
 cabins = (higher,normal)
 
 [glo_re_mag]
+database_name = Renault Magnum
 make = renault
 model = magnum
 cabins = (solo)
 
 [glo_ma_tgx]
+database_name = MAN TGX
 make = man
 model = tgx
 cabins = (xxl_cab,xlx_cab,xl_cab)
 
 [glo_iv_stra]
+database_name = Iveco Stralis
 make = iveco
 model = stralis
 cabins = (as_higher,at_higher,at)
 
 [glo_iv_hiwa]
+database_name = Iveco Stralis Hi Way
 make = iveco
 model = hiway
 cabins = (hiway)
 
 [glo_sc_r12]
+database_name = Scania R 2012
 make = scania
 model = r
 cabins = (topline,highline,normal)
 
 [glo_sc_strm]
+database_name = Scania Streamline
 make = scania
 model = streamline
 cabins = (topline,highline,normal)
 
 [glo_sc_r16]
+database_name = Scania R 2016
 make = scania
 model = r_2016
 cabins = (highline,normal)
 
 [glo_sc_s16]
+database_name = Scania S 2016
 make = scania	
 model = s_2016
 cabins = (highline,normal)
