Changed some variable names before it's too late

--- a/database.ini
+++ b/database.ini
@@ -2,7 +2,7 @@
 
 # Euro trucks
 [DAF XF 105]
-type = "euro"
+vehicle_type = "euro"
 make = daf
 model = xf
 cabin_1 = super_s_cab
@@ -10,7 +10,7 @@ cabin_2 = s_cab_plus
 cabin_3 = space_cab
 
 [DAF XF Euro 6]
-type = "euro"
+vehicle_type = "euro"
 make = daf
 model = xf_euro6
 cabin_1 = superspace
@@ -18,7 +18,7 @@ cabin_2 = space_spoiler
 cabin_3 = space
 
 [Mercedes Benz Actros]
-type = "euro"
+vehicle_type = "euro"
 make = mercedes
 model = actros
 cabin_1 = megaspace
@@ -26,7 +26,7 @@ cabin_2 = cabin_l
 cabin_3 = cabin_l_lw
 
 [Mercedes Benz New Actros]
-type = "euro"
+vehicle_type = "euro"
 mercedes
 model = actros2014
 cabin_1 = gigaspace
@@ -34,7 +34,7 @@ cabin_2 = bigspace
 cabin_3 = streamspace
 
 [Volvo FH16 2009]
-type = "euro"
+vehicle_type = "euro"
 make = volvo
 model = fh16
 cabin_1 = l2h3
@@ -42,7 +42,7 @@ cabin_2 = l2h2
 cabin_3 = l2h1
 
 [Volvo FH16 2012]
-type = "euro"
+vehicle_type = "euro"
 make = volvo
 model = fh16_2012
 cabin_1 = l2h3
@@ -50,20 +50,20 @@ cabin_2 = l2h2
 cabin_3 = l2h1
 
 [Renault Premium]
-type = "euro"
+vehicle_type = "euro"
 make = renault
 model = premium
 cabin_1 = higher
 cabin_2 = normal
 
 [Renault Magnum]
-type = "euro"
+vehicle_type = "euro"
 make = renault
 model = magnum
 cabin_1 = solo
 
 [MAN TGX]
-type = "euro"
+vehicle_type = "euro"
 make = man
 model = tgx
 cabin_1 = xxl_cab
@@ -71,7 +71,7 @@ cabin_2 = xlx_cab
 cabin_3 = xl_cab
 
 [Iveco Stralis]
-type = "euro"
+vehicle_type = "euro"
 make = iveco
 model = stralis
 cabin_1 = as_higher
@@ -79,13 +79,13 @@ cabin_2 = at_higher
 cabin_3 = at
 
 [Iveco Hi Way]
-type = "euro"
+vehicle_type = "euro"
 make = iveco
 model = hiway
 cabin_1 = hiway
 
 [Scania R 2012]
-type = "euro"
+vehicle_type = "euro"
 make = scania
 model = r
 cabin_1 = topline
@@ -93,7 +93,7 @@ cabin_2 = highline
 cabin_3 = normal
 
 [Scania Streamline]
-type = "euro"
+vehicle_type = "euro"
 make = scania
 model = streamline
 cabin_1 = topline
@@ -101,14 +101,14 @@ cabin_2 = highline
 cabin_3 = normal
 
 [Scania R 2016]
-type = "euro"
+vehicle_type = "euro"
 make = scania
 model = r_2016
 cabin_1 = highline
 cabin_2 = normal
 
 [Scania S 2016]
-type = "euro"
+vehicle_type = "euro"
 make = scania	
 model = s_2016
 cabin_1 = highline
@@ -116,25 +116,25 @@ cabin_2 = normal
 
 # American trucks
 [Peterbilt 389]
-type = "american"
+vehicle_type = "american"
 
 [Peterbilt 579]
-type = "american"
+vehicle_type = "american"
 
 [Kenworth W900]
-type = "american"
+vehicle_type = "american"
 
 [Kenworth T680]
-type = "american"
+vehicle_type = "american"
 
 # Trailers
 [Double Triple Reefer]
-type = "trailer"
+vehicle_type = "trailer"
 
 # Euro truck mod
 [EuroMans Scania T]
-type = "euro mod"
+vehicle_type = "euro mod"
 
 # American truck mod
 [MuricaMans Peterbilt 359]
-type = "american mod"
+vehicle_type = "american mod"
