--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ManParams]
-name = Paintjob Packer Test Skin
+ingame_name = Paintjob Packer Test Skin
 price = 6000
 unlock_level = 0
 pack_version = v1
@@ -11,7 +11,7 @@ model = s_2016
 cabins = (normal,highline,highline_8x4)
 
 [AutoParams]
-name = Globex Paintjob
+ingame_name = Globex Paintjob
 price = 6000
 unlock_level = 0
 pack_version = v0.9
