Manual paintjob making now fully functional

--- a/config.ini
+++ b/config.ini
@@ -5,10 +5,11 @@ unlock_level = 0
 pack_version = v1
 pack_name = Paintjob Packer Test Mod
 pack_author = Paintjob Packer
-internal_name = paintjob_packer
-make = scania
-model = s_2016
-cabins = (normal,highline,highline_8x4)
+internal_name = paint_packer
+database_name = DAF XF Euro 6
+make = daf
+model = xf_euro6
+cabins = superspace,space_spoiler,space
 
 [AutoParams]
 ingame_name = Globex Paintjob
