Added 8x4 cabins and fixed string-strings

--- a/database.ini
+++ b/database.ini
@@ -2,7 +2,7 @@
 
 # Euro trucks
 [DAF XF 105]
-vehicle_type = "euro"
+vehicle_type = euro
 make = daf
 model = xf
 cabin_1 = super_s_cab
@@ -10,7 +10,7 @@ cabin_2 = s_cab_plus
 cabin_3 = space_cab
 
 [DAF XF Euro 6]
-vehicle_type = "euro"
+vehicle_type = euro
 make = daf
 model = xf_euro6
 cabin_1 = superspace
@@ -18,7 +18,7 @@ cabin_2 = space_spoiler
 cabin_3 = space
 
 [Mercedes Benz Actros]
-vehicle_type = "euro"
+vehicle_type = euro
 make = mercedes
 model = actros
 cabin_1 = megaspace
@@ -26,15 +26,16 @@ cabin_2 = cabin_l
 cabin_3 = cabin_l_lw
 
 [Mercedes Benz New Actros]
-vehicle_type = "euro"
-mercedes
+vehicle_type = euro
+make = mercedes
 model = actros2014
 cabin_1 = gigaspace
 cabin_2 = bigspace
 cabin_3 = streamspace
+cabin_8x4 = gs_8x4
 
 [Volvo FH16 2009]
-vehicle_type = "euro"
+vehicle_type = euro
 make = volvo
 model = fh16
 cabin_1 = l2h3
@@ -42,28 +43,29 @@ cabin_2 = l2h2
 cabin_3 = l2h1
 
 [Volvo FH16 2012]
-vehicle_type = "euro"
+vehicle_type = euro
 make = volvo
 model = fh16_2012
 cabin_1 = l2h3
 cabin_2 = l2h2
 cabin_3 = l2h1
+cabin_8x4 = l2h3_8x4
 
 [Renault Premium]
-vehicle_type = "euro"
+vehicle_type = euro
 make = renault
 model = premium
 cabin_1 = higher
 cabin_2 = normal
 
 [Renault Magnum]
-vehicle_type = "euro"
+vehicle_type = euro
 make = renault
 model = magnum
 cabin_1 = solo
 
 [MAN TGX]
-vehicle_type = "euro"
+vehicle_type = euro
 make = man
 model = tgx
 cabin_1 = xxl_cab
@@ -71,7 +73,7 @@ cabin_2 = xlx_cab
 cabin_3 = xl_cab
 
 [Iveco Stralis]
-vehicle_type = "euro"
+vehicle_type = euro
 make = iveco
 model = stralis
 cabin_1 = as_higher
@@ -79,62 +81,66 @@ cabin_2 = at_higher
 cabin_3 = at
 
 [Iveco Hi Way]
-vehicle_type = "euro"
+vehicle_type = euro
 make = iveco
 model = hiway
 cabin_1 = hiway
 
 [Scania R 2012]
-vehicle_type = "euro"
+vehicle_type = euro
 make = scania
 model = r
 cabin_1 = topline
 cabin_2 = highline
 cabin_3 = normal
+cabin_8x4 = tl_8x4
 
 [Scania Streamline]
-vehicle_type = "euro"
+vehicle_type = euro
 make = scania
 model = streamline
 cabin_1 = topline
 cabin_2 = highline
 cabin_3 = normal
+cabin_8x4 = tl_8x4
 
 [Scania R 2016]
-vehicle_type = "euro"
+vehicle_type = euro
 make = scania
 model = r_2016
 cabin_1 = highline
 cabin_2 = normal
+cabin_8x4 = highline_8x4
 
 [Scania S 2016]
-vehicle_type = "euro"
+vehicle_type = euro
 make = scania	
 model = s_2016
 cabin_1 = highline
 cabin_2 = normal
+cabin_8x4 = highline_8x4
 
 # American trucks
 [Peterbilt 389]
-vehicle_type = "american"
+vehicle_type = american
 
 [Peterbilt 579]
-vehicle_type = "american"
+vehicle_type = american
 
 [Kenworth W900]
-vehicle_type = "american"
+vehicle_type = american
 
 [Kenworth T680]
-vehicle_type = "american"
+vehicle_type = american
 
 # Trailers
 [Double Triple Reefer]
-vehicle_type = "trailer"
+vehicle_type = trailer
 
 # Euro truck mod
 [EuroMans Scania T]
-vehicle_type = "euro mod"
+vehicle_type = euro mod
 
 # American truck mod
 [MuricaMans Peterbilt 359]
-vehicle_type = "american mod"
+vehicle_type = american mod
