Manual paintjob configuration now functional

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ManParams]
-ingame_name = Paintjob Packer Test Skin
+ingame_name = Paintjob Packer Test Paintjob
 price = 6000
 unlock_level = 0
 pack_version = v1
@@ -19,3 +19,4 @@ pack_version = v0.9
 pack_name = Globex Paintjob Pack
 pack_author = Carsmaniac
 truck_list = globex_euro
+
