Restructured truck lists & made manual just another list

--- a/auto lists/globex_euro.ini
+++ b/auto lists/globex_euro.ini
@@ -1,6 +1,12 @@
 [Params]
 list_type = euro
 list_name = Globex ETS 2 Paintjob Pack
+ingame_name = Globex Paintjob
+price = 6000
+unlock_level = 0
+pack_version = v0.9
+pack_name = Globex Paintjob Pack
+pack_author = Carsmaniac
 
 [glo_da_xf]
 database_name = DAF XF 105
