--- a/config.ini
+++ b/config.ini
@@ -1,22 +1,4 @@
-[ManParams]
-ingame_name = Paintjob Packer Test Paintjob
-price = 6000
-unlock_level = 0
-pack_version = v1
-pack_name = Paintjob Packer Test Mod
-pack_author = Paintjob Packer
-internal_name = paint_packer
-database_name = DAF XF Euro 6
-make = daf
-model = xf_euro6
-cabins = superspace,space_spoiler,space
-
-[AutoParams]
-ingame_name = Globex Paintjob
-price = 6000
-unlock_level = 0
-pack_version = v0.9
-pack_name = Globex Paintjob Pack
-pack_author = Carsmaniac
+[Params]
 truck_list = globex_euro
-
+list_name = Globex ETS 2 Paintjob Pack
+all_truck_lists = globex_euro
