--- a/truck lists/globex_euro.ini
+++ b/truck lists/globex_euro.ini
@@ -1,99 +1,114 @@
 [Params]
-list_type = euro
-list_name = Globex ETS 2 Paintjob Pack
 ingame_name = Globex Paintjob
 price = 6000
 unlock_level = 0
 pack_version = v0.9
 pack_name = Globex Paintjob Pack
 pack_author = Carsmaniac
+list_type = euro
+list_name = Globex ETS 2 Paintjob Pack
 
 [glo_da_xf]
 database_name = DAF XF 105
 make = daf
 model = xf
 cabins = super_s_cab,s_cab_plus,space_cab
+cabin_numbers = 1,2,3
 
 [glo_da_eur6]
 database_name = DAF XF Euro 6
 make = daf
 model = xf_euro6
 cabins = superspace,space_spoiler,space
+cabin_numbers = 1,2,3
 
 [glo_mb_ac09]
 database_name = Mercedes Benz Actros
 make = mercedes
 model = actros
 cabins = megaspace,cabin_l,cabin_l_lw
+cabin_numbers = 1,2,3
 
 [glo_mb_ac14]
 database_name = Mercedes Benz New Actros
 make = mercedes
 model = actros2014
 cabins = gigaspace,bigspace,streamspace
+cabin_numbers = 1,2,3
 
 [glo_vo_fh09]
 database_name = Volvo FH16 2009
 make = volvo
 model = fh16
 cabins = l2h3,l2h2,l2h1
+cabin_numbers = 1,2,3
 
 [glo_vo_fh12]
 database_name = Volvo FH15 2012
 make = volvo
 model = fh16_2012
 cabins = l2h3,l2h2,l2h1
+cabin_numbers = 1,2,3
 
 [glo_re_prem]
 database_name = Renault Premium
 make = renault
 model = premium
 cabins = higher,normal
+cabin_numbers = 1,2
 
 [glo_re_mag]
 database_name = Renault Magnum
 make = renault
 model = magnum
 cabins = solo
+cabin_numbers = 1
 
 [glo_ma_tgx]
 database_name = MAN TGX
 make = man
 model = tgx
 cabins = xxl_cab,xlx_cab,xl_cab
+cabin_numbers = 1,2,3
 
 [glo_iv_stra]
 database_name = Iveco Stralis
 make = iveco
 model = stralis
 cabins = as_higher,at_higher,at
+cabin_numbers = 1,2,3
 
 [glo_iv_hiwa]
 database_name = Iveco Stralis Hi Way
 make = iveco
 model = hiway
 cabins = hiway
+cabin_numbers = 1
 
 [glo_sc_r12]
 database_name = Scania R 2012
 make = scania
 model = r
 cabins = topline,highline,normal
+cabin_numbers = 1,2,3
 
 [glo_sc_strm]
 database_name = Scania Streamline
 make = scania
 model = streamline
 cabins = topline,highline,normal
+cabin_numbers = 1,2,3
 
 [glo_sc_r16]
 database_name = Scania R 2016
 make = scania
 model = r_2016
 cabins = highline,normal
+cabin_numbers = 1,2
 
 [glo_sc_s16]
 database_name = Scania S 2016
-make = scania	
+make = scania
 model = s_2016
 cabins = highline,normal
+cabin_numbers = 1,2
