Added working create_new_list function

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [Params]
-truck_list = globex_euro
-list_name = Globex ETS 2 Paintjob Pack
-all_truck_lists = globex_euro
+truck_list = globex_american
+list_name = Globex ATS Paintjob Pack
+all_truck_lists = globex_euro,globex_american
+
