--- a/truck lists/globex_american.ini
+++ b/truck lists/globex_american.ini
@@ -5,9 +5,13 @@ unlock_level = 0
 pack_version = v1
 pack_name = Paintjob Packer Mod
 pack_author = Paintjob Packer
-internal_name = paint_packer
+list_name = Globex ATS Paintjob Pack
+list_type = american
+
+[paint_packer]
 database_name = DAF XF Euro 6
 make = daf
 model = xf_euro6
 cabins = superspace,space_spoiler,space
+cabin_numbers = 1,2,3
 
