--- a/database.ini
+++ b/database.ini
@@ -8,6 +8,7 @@ model = xf
 cabin_1 = super_s_cab
 cabin_2 = s_cab_plus
 cabin_3 = space_cab
+new_truck_format = false
 
 [DAF XF Euro 6]
 vehicle_type = euro
@@ -16,6 +17,7 @@ model = xf_euro6
 cabin_1 = superspace
 cabin_2 = space_spoiler
 cabin_3 = space
+new_truck_format = false
 
 [Mercedes Benz Actros]
 vehicle_type = euro
@@ -24,6 +26,7 @@ model = actros
 cabin_1 = megaspace
 cabin_2 = cabin_l
 cabin_3 = cabin_l_lw
+new_truck_format = false
 
 [Mercedes Benz New Actros]
 vehicle_type = euro
@@ -33,6 +36,7 @@ cabin_1 = gigaspace
 cabin_2 = bigspace
 cabin_3 = streamspace
 cabin_8x4 = gs_8x4
+new_truck_format = false
 
 [Volvo FH16 2009]
 vehicle_type = euro
@@ -41,6 +45,7 @@ model = fh16
 cabin_1 = l2h3
 cabin_2 = l2h2
 cabin_3 = l2h1
+new_truck_format = false
 
 [Volvo FH16 2012]
 vehicle_type = euro
@@ -50,6 +55,7 @@ cabin_1 = l2h3
 cabin_2 = l2h2
 cabin_3 = l2h1
 cabin_8x4 = l2h3_8x4
+new_truck_format = false
 
 [Renault Premium]
 vehicle_type = euro
@@ -57,12 +63,14 @@ make = renault
 model = premium
 cabin_1 = higher
 cabin_2 = normal
+new_truck_format = false
 
 [Renault Magnum]
 vehicle_type = euro
 make = renault
 model = magnum
 cabin_1 = solo
+new_truck_format = false
 
 [MAN TGX]
 vehicle_type = euro
@@ -71,6 +79,7 @@ model = tgx
 cabin_1 = xxl_cab
 cabin_2 = xlx_cab
 cabin_3 = xl_cab
+new_truck_format = false
 
 [Iveco Stralis]
 vehicle_type = euro
@@ -79,12 +88,14 @@ model = stralis
 cabin_1 = as_higher
 cabin_2 = at_higher
 cabin_3 = at
+new_truck_format = false
 
 [Iveco Hi Way]
 vehicle_type = euro
 make = iveco
 model = hiway
 cabin_1 = hiway
+new_truck_format = false
 
 [Scania R 2012]
 vehicle_type = euro
@@ -94,6 +105,7 @@ cabin_1 = topline
 cabin_2 = highline
 cabin_3 = normal
 cabin_8x4 = tl_8x4
+new_truck_format = false
 
 [Scania Streamline]
 vehicle_type = euro
@@ -103,6 +115,7 @@ cabin_1 = topline
 cabin_2 = highline
 cabin_3 = normal
 cabin_8x4 = tl_8x4
+new_truck_format = false
 
 [Scania R 2016]
 vehicle_type = euro
@@ -111,6 +124,7 @@ model = r_2016
 cabin_1 = highline
 cabin_2 = normal
 cabin_8x4 = highline_8x4
+new_truck_format = true
 
 [Scania S 2016]
 vehicle_type = euro
@@ -119,6 +133,7 @@ model = s_2016
 cabin_1 = highline
 cabin_2 = normal
 cabin_8x4 = highline_8x4
+new_truck_format = true
 
 # American trucks
 [Peterbilt 389]
