--- a/truck lists/manual.ini
+++ b/truck lists/manual.ini
@@ -13,5 +13,5 @@ cabins = highline,normal
 cabin_numbers = 1,2
 new_truck_format = true
 accessory_names = shared_white,shared_blue,shared_grey
-accessories = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=1,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
+accessory_dict = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=1,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
 
