Theoretically add support for American trucks
With the database filled in, American paintjobs should theoretically now
be supported. All that's left is testing, then restricting truck lists
by vehicle type.

--- a/database.ini
+++ b/database.ini
@@ -128,7 +128,7 @@ new_truck_format = true
 
 [Scania S 2016]
 vehicle_type = euro
-make = scania	
+make = scania
 model = s_2016
 cabin_1 = highline
 cabin_2 = normal
@@ -138,15 +138,48 @@ new_truck_format = true
 # American trucks
 [Peterbilt 389]
 vehicle_type = american
+make = peterbilt
+model = 389
+cabin_1 = exclusive
+cabin_2 = standard
+cabin_3 = duty
+new_truck_format = false
 
 [Peterbilt 579]
 vehicle_type = american
+make = peterbilt
+model = 579
+cabin_1 = exclusive
+cabin_2 = standard
+cabin_3 = duty
+new_truck_format = false
 
 [Kenworth W900]
 vehicle_type = american
+make = kenworth
+model = w900
+cabin_1 = exclusive
+cabin_2 = standard
+cabin_3 = duty
+new_truck_format = false
 
 [Kenworth T680]
 vehicle_type = american
+make = kenworth
+model = t680
+cabin_1 = exclusive
+cabin_2 = standard
+cabin_3 = duty
+new_truck_format = false
+
+[Volvo VNL]
+vehicle_type = american
+make = volvo
+model = vnl
+cabin_1 = exclusive
+cabin_2 = standard
+cabin_3 = duty
+new_truck_format = false
 
 # Trailers
 [Double Triple Reefer]
