--- a/truck lists/globex_american.ini
+++ b/truck lists/globex_american.ini
@@ -26,3 +26,11 @@ new_truck_format = true
 accessory_name_list = shared_grey,sideskirt_common,mirrors
 accessory_dict = accessory_exhaust=0,accessory_painted_logo=0,accessory_mirrors=2,accessory_sunshield=0,accessory_sideskirt_4x2=1,accessory_sideskirt_6x2=1,accessory_sideskirt_6x2l=1,accessory_front_mudflap=0,accessory_rear_bumper=0,accessory_chassis_cover=0,accessory_rear_fender=0
 
+[glo_vnl]
+database_name = Volvo VNL
+make = volvo
+model = vnl
+cabins = exclusive,standard
+cabin_numbers = 1,2
+new_truck_format = false
+
