Limit lists by list type
Lists with list_type "american" can only contain ATS trucks, mods and
trailers, and vice versa with "euro" lists. Trailers were also split
into ETS 2 trailers and ATS trailers due to there being different
configurations available in each game.

Truck list name and game supported were also added to view_params()

--- a/database.ini
+++ b/database.ini
@@ -181,9 +181,13 @@ cabin_2 = standard
 cabin_3 = duty
 new_truck_format = false
 
-# Trailers
-[Double Triple Reefer]
-vehicle_type = trailer
+# Euro trailers
+[Double Triple Ultrawide Reefer]
+vehicle_type = euro trailer
+
+# American trailers
+[Rocky Mountain Oyster Double]
+vehicle_type = american trailer
 
 # Euro truck mod
 [EuroMans Scania T]
