--- a/truck lists/manual.ini
+++ b/truck lists/manual.ini
@@ -5,6 +5,7 @@ unlock_level = 0
 pack_version = v1
 pack_name = Paintjob Packer Mod
 pack_author = Paintjob Packer
+list_type = euro
 internal_name = paint_packer
 database_name = Scania S 2016
 make = scania
@@ -14,4 +15,3 @@ cabin_numbers = 1,2
 new_truck_format = true
 accessory_name_list = shared_white,shared_blue,shared_grey
 accessory_dict = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=0,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
-
