Add truck list renaming
Truck lists can now be renamed (truck_list and list_name can both be
changed). Added during this branch so I can continue testing ATS lists.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Params]
-truck_list = globex_american
-list_name = Globex ATS Paintjob Pack
-all_truck_lists = globex_euro,globex_american
+truck_list = ats_support_test_list
+list_name = ATS Support Test List
+all_truck_lists = globex_euro,globex_american,ats_support_test_list
 
