Add removing truck lists and renaming trucks
Truck lists can now be removed as long as they're not the last list, and
trucks within a list can have their internal_name changed.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Params]
-truck_list = ats_support_test_list
+truck_list = ats_support_test
 list_name = ATS Support Test List
-all_truck_lists = globex_euro,globex_american,ats_support_test_list
+all_truck_lists = globex_euro,globex_american,ats_support_test
 
