Add generation of full paintjob packs
auto.py has been rewritten to function similarly to man.py, but for an
entire pack. A number of files were added to the ats_support_test list
as part of testing. Additionally while testing, I found that
vehicle_type had to be added to each truck list's .ini file.

--- a/truck lists/ats_support_test.ini
+++ b/truck lists/ats_support_test.ini
@@ -15,6 +15,7 @@ model = 389
 cabins = exclusive,standard,duty
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = american
 
 [test_vnl]
 database_name = Volvo VNL
@@ -23,6 +24,7 @@ model = vnl
 cabins = exclusive,standard,duty
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = american
 
 [test_579]
 database_name = Peterbilt 579
@@ -31,6 +33,7 @@ model = 579
 cabins = exclusive,standard,duty
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = american
 
 [test_w900]
 database_name = Kenworth W900
@@ -39,6 +42,7 @@ model = w900
 cabins = exclusive,standard,duty
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = american
 
 [test_t680]
 database_name = Kenworth T680
@@ -47,4 +51,4 @@ model = t680
 cabins = exclusive,standard,duty
 cabin_numbers = 1,2,3
 new_truck_format = false
-
+vehicle_type = american
