--- a/truck lists/globex_euro.ini
+++ b/truck lists/globex_euro.ini
@@ -15,6 +15,7 @@ model = xf
 cabins = super_s_cab,s_cab_plus,space_cab
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_mb_ac09]
 database_name = Mercedes Benz Actros
@@ -23,6 +24,7 @@ model = actros
 cabins = megaspace,cabin_l,cabin_l_lw
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_mb_ac14]
 database_name = Mercedes Benz New Actros
@@ -31,6 +33,7 @@ model = actros2014
 cabins = gigaspace,bigspace,streamspace
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_vo_fh09]
 database_name = Volvo FH16 2009
@@ -39,6 +42,7 @@ model = fh16
 cabins = l2h3,l2h2,l2h1
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_vo_fh12]
 database_name = Volvo FH15 2012
@@ -47,6 +51,7 @@ model = fh16_2012
 cabins = l2h3,l2h2,l2h1
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_re_prem]
 database_name = Renault Premium
@@ -55,6 +60,7 @@ model = premium
 cabins = higher,normal
 cabin_numbers = 1,2
 new_truck_format = false
+vehicle_type = euro
 
 [glo_re_mag]
 database_name = Renault Magnum
@@ -63,6 +69,7 @@ model = magnum
 cabins = solo
 cabin_numbers = 1
 new_truck_format = false
+vehicle_type = euro
 
 [glo_ma_tgx]
 database_name = MAN TGX
@@ -71,6 +78,7 @@ model = tgx
 cabins = xxl_cab,xlx_cab,xl_cab
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_iv_stra]
 database_name = Iveco Stralis
@@ -79,6 +87,7 @@ model = stralis
 cabins = as_higher,at_higher,at
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_iv_hiwa]
 database_name = Iveco Stralis Hi Way
@@ -87,6 +96,7 @@ model = hiway
 cabins = hiway
 cabin_numbers = 1
 new_truck_format = false
+vehicle_type = euro
 
 [glo_sc_r12]
 database_name = Scania R 2012
@@ -95,6 +105,7 @@ model = r
 cabins = topline,highline,normal
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_sc_strm]
 database_name = Scania Streamline
@@ -103,6 +114,7 @@ model = streamline
 cabins = topline,highline,normal
 cabin_numbers = 1,2,3
 new_truck_format = false
+vehicle_type = euro
 
 [glo_sc_r16]
 database_name = Scania R 2016
@@ -111,6 +123,7 @@ model = r_2016
 cabins = highline,normal
 cabin_numbers = 1,2
 new_truck_format = true
+vehicle_type = euro
 accessory_name_list = shared_white,shared_blue,shared_grey
 accessory_dict = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=1,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
 
@@ -121,6 +134,7 @@ model = s_2016
 cabins = highline,normal
 cabin_numbers = 1,2
 new_truck_format = true
+vehicle_type = euro
 accessory_name_list = shared_white,shared_blue,shared_grey
 accessory_dict = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=1,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
 
@@ -131,4 +145,4 @@ model = xf_euro6
 cabins = superspace,space_spoiler,space
 cabin_numbers = 1,2,3
 new_truck_format = false
-
+vehicle_type = euro
