--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [Params]
-truck_list = Globex ATS Paintjob Pack
+truck_list = ATS Support Test List
 all_truck_lists = ATS Support Test List,Globex ETS 2 Paintjob Pack,Globex ATS Paintjob Pack
 
