--- a/database.ini
+++ b/database.ini
@@ -6,8 +6,11 @@ vehicle_type = euro
 make = daf
 model = xf
 cabin_1 = super_s_cab
+cabin_1_name = XF 105 A
 cabin_2 = s_cab_plus
+cabin_2_name = XF 105 B
 cabin_3 = space_cab
+cabin_3_name = XF 105 C
 new_truck_format = false
 
 [DAF XF Euro 6]
@@ -15,8 +18,11 @@ vehicle_type = euro
 make = daf
 model = xf_euro6
 cabin_1 = superspace
+cabin_1_name = XF Euro 6 A
 cabin_2 = space_spoiler
+cabin_2_name = XF Euro 6 B
 cabin_3 = space
+cabin_3_name = XF Euro 6 C
 new_truck_format = false
 
 [Mercedes Benz Actros]
@@ -24,8 +30,11 @@ vehicle_type = euro
 make = mercedes
 model = actros
 cabin_1 = megaspace
+cabin_1_name = Actros A
 cabin_2 = cabin_l
+cabin_2_name = Actros B
 cabin_3 = cabin_l_lw
+cabin_3_name = Actros C
 new_truck_format = false
 
 [Mercedes Benz New Actros]
@@ -33,9 +42,13 @@ vehicle_type = euro
 make = mercedes
 model = actros2014
 cabin_1 = gigaspace
+cabin_1_name = New Actros A
 cabin_2 = bigspace
+cabin_2_name = New Actros B
 cabin_3 = streamspace
+cabin_3_name = New Actros C
 cabin_8x4 = gs_8x4
+cabin_8x4_name = New Actros 8x4
 new_truck_format = false
 
 [Volvo FH16 2009]
@@ -43,8 +56,11 @@ vehicle_type = euro
 make = volvo
 model = fh16
 cabin_1 = l2h3
+cabin_1_name = FH Classic A
 cabin_2 = l2h2
+cabin_2_name = FH Classic B
 cabin_3 = l2h1
+cabin_3_name = FH Classic C
 new_truck_format = false
 
 [Volvo FH16 2012]
@@ -52,9 +68,13 @@ vehicle_type = euro
 make = volvo
 model = fh16_2012
 cabin_1 = l2h3
+cabin_1_name = FH16 A
 cabin_2 = l2h2
+cabin_2_name = FH16 B
 cabin_3 = l2h1
+cabin_3_name = FH16 C
 cabin_8x4 = l2h3_8x4
+cabin_8x4_name = FH16 8x4
 new_truck_format = false
 
 [Renault Premium]
@@ -62,7 +82,9 @@ vehicle_type = euro
 make = renault
 model = premium
 cabin_1 = higher
+cabin_1_name = Premium A
 cabin_2 = normal
+cabin_2_name = Premium B
 new_truck_format = false
 
 [Renault Magnum]
@@ -70,6 +92,7 @@ vehicle_type = euro
 make = renault
 model = magnum
 cabin_1 = solo
+cabin_1_name = Magnum A
 new_truck_format = false
 
 [MAN TGX]
@@ -77,8 +100,11 @@ vehicle_type = euro
 make = man
 model = tgx
 cabin_1 = xxl_cab
+cabin_1_name = TGX A
 cabin_2 = xlx_cab
+cabin_2_name = TGX B
 cabin_3 = xl_cab
+cabin_3_name = TGX C
 new_truck_format = false
 
 [Iveco Stralis]
@@ -86,8 +112,11 @@ vehicle_type = euro
 make = iveco
 model = stralis
 cabin_1 = as_higher
+cabin_1_name = Stralis A
 cabin_2 = at_higher
+cabin_2_name = Stralis B
 cabin_3 = at
+cabin_3_name = Stralis C
 new_truck_format = false
 
 [Iveco Hi Way]
@@ -95,6 +124,7 @@ vehicle_type = euro
 make = iveco
 model = hiway
 cabin_1 = hiway
+cabin_1_name = Hi-Way A
 new_truck_format = false
 
 [Scania R 2012]
@@ -102,9 +132,13 @@ vehicle_type = euro
 make = scania
 model = r
 cabin_1 = topline
+cabin_1_name = R Series A
 cabin_2 = highline
+cabin_2_name = R Series B
 cabin_3 = normal
+cabin_3_name = R Series C
 cabin_8x4 = tl_8x4
+cabin_8x4_name = R Series 8x4
 new_truck_format = false
 
 [Scania Streamline]
@@ -112,9 +146,13 @@ vehicle_type = euro
 make = scania
 model = streamline
 cabin_1 = topline
+cabin_1_name = Streamline A
 cabin_2 = highline
+cabin_2_name = Streamline B
 cabin_3 = normal
+cabin_3_name = Streamline C
 cabin_8x4 = tl_8x4
+cabin_8x4_name = Streamline 8x4
 new_truck_format = false
 
 [Scania R 2016]
@@ -122,8 +160,11 @@ vehicle_type = euro
 make = scania
 model = r_2016
 cabin_1 = highline
+cabin_1_name = R 2016 A
 cabin_2 = normal
+cabin_2_name = R 2016 B
 cabin_8x4 = highline_8x4
+cabin_8x4_name = R 2016 C
 new_truck_format = true
 
 [Scania S 2016]
@@ -131,8 +172,11 @@ vehicle_type = euro
 make = scania
 model = s_2016
 cabin_1 = highline
+cabin_1_name = S Series A
 cabin_2 = normal
+cabin_2_name = S Series B
 cabin_8x4 = highline_8x4
+cabin_8x4_name = S Series 8x4
 new_truck_format = true
 
 # American trucks
@@ -141,8 +185,11 @@ vehicle_type = american
 make = peterbilt
 model = 389
 cabin_1 = exclusive
+cabin_1_name = 389 A
 cabin_2 = standard
+cabin_2_name = 389 B
 cabin_3 = duty
+cabin_3_name = 389 C
 new_truck_format = false
 
 [Peterbilt 579]
@@ -150,8 +197,11 @@ vehicle_type = american
 make = peterbilt
 model = 579
 cabin_1 = exclusive
+cabin_1_name = 579 A
 cabin_2 = standard
+cabin_2_name = 579 B
 cabin_3 = duty
+cabin_3_name = 579 C
 new_truck_format = false
 
 [Kenworth W900]
@@ -159,8 +209,11 @@ vehicle_type = american
 make = kenworth
 model = w900
 cabin_1 = exclusive
+cabin_1_name = W900 A
 cabin_2 = standard
+cabin_2_name = W900 B
 cabin_3 = duty
+cabin_3_name = W900 C
 new_truck_format = false
 
 [Kenworth T680]
@@ -168,8 +221,11 @@ vehicle_type = american
 make = kenworth
 model = t680
 cabin_1 = exclusive
+cabin_1_name = T680 A
 cabin_2 = standard
+cabin_2_name = T680 B
 cabin_3 = duty
+cabin_3_name = T680 C
 new_truck_format = false
 
 [Volvo VNL]
@@ -177,8 +233,11 @@ vehicle_type = american
 make = volvo
 model = vnl
 cabin_1 = exclusive
+cabin_1_name = VNL A
 cabin_2 = standard
+cabin_2_name = VNL B
 cabin_3 = duty
+cabin_3_name = VNL C
 new_truck_format = false
 
 # Euro trailers
