Fix accessory name bug, update to-do list
Fixed a potential bug wherein accessory names could have commas or
equals signs in them, the two characters used as delimiters within each
truck's accessory_dict. Additionally, the to-do list has been updated to
reflect the completion of the user-facing-names branch.

--- a/database.ini
+++ b/database.ini
@@ -164,7 +164,7 @@ cabin_1_name = R 2016 A
 cabin_2 = normal
 cabin_2_name = R 2016 B
 cabin_8x4 = highline_8x4
-cabin_8x4_name = R 2016 C
+cabin_8x4_name = R 2016 8x4
 new_truck_format = true
 
 [Scania S 2016]
