Rename all truck accessories
All accessories now have nice-looking names. They previously used all
lower-case + underscore names for similar reasons to truck_list, but now
they've been given a treatment similar to the user-facing-names branch.

--- a/accessories.ini
+++ b/accessories.ini
@@ -1,25 +1,26 @@
 [Scania R 2016]
-accessory_exhaust = exhaust_m.mg01
-accessory_painted_logo = f_logo.painted
-accessory_mirrors = f_mirror.painted,mirror.painted,mirror.painted_f,s_mirror.painted
-accessory_sunshield = sunshld.stock,sunshld.sunshld_01,sunshld.sunshld_04,sunshld.sunshld_05,sunshld.sunshld_06
-accessory_sideskirt_4x2 = sideskirt.4x2_p,sideskirt.4x2_p_1,sideskirt.4x2_p_2,sideskirt.4x2_p_v8,sideskirt.4x2_p_v8_1,sideskirt.4x2_p_v8_2
-accessory_sideskirt_6x2 = sideskirt.6x2_p,sideskirt.6x2_p_1,sideskirt.6x2_p_2,sideskirt.6x2_p_v8,sideskirt.6x2_p_v8_1,sideskirt.6x2_p_v8_2
-accessory_sideskirt_6x2l = sideskirt.6x2l_p,sideskirt.6x2l_p_1,sideskirt.6x2l_p_2,sideskirt.6x2l_p_v8,sideskirt.6x2l_p_v8_1,sideskirt.6x2l_p_v8_2
-accessory_front_mudflap = f_mudflap.kotr,f_mudflap.kotrh,f_mudflap.kotrl,f_mudflap.scania,f_mudflap.scaniah,f_mudflap.scanial,f_mudflap.scaniamg,f_mudflap.scaniamgh,f_mudflap.scaniamgl,f_mudflap.v8,f_mudflap.v8h,f_mudflap.v8l
-accessory_rear_bumper = r_bumper.duty_p,r_bumper.mg01,r_bumper.mg03,r_bumper.mg04,r_bumper.stock_p
-accessory_chassis_cover = r_chs_cover.4x2_p,r_chs_cover.6xn_p,r_chs_cover.6xnl_p
-accessory_rear_fender = r_fender.4x2_blk_p,r_fender.4x2_p,r_fender.4x2_spcgr_p,r_fender.6x2_blk_p,r_fender.6x2_p,r_fender.6x2_spcgr_p,r_fender.6x2l_blk_p,r_fender.6x2l_p,r_fender.6x2l_spcgr_p
+Exhaust = exhaust_m.mg01
+Painted logo = f_logo.painted
+Mirrors = f_mirror.painted,mirror.painted,mirror.painted_f,s_mirror.painted
+Sunshield= sunshld.stock,sunshld.sunshld_01,sunshld.sunshld_04,sunshld.sunshld_05,sunshld.sunshld_06
+Sideskirt (4x2) = sideskirt.4x2_p,sideskirt.4x2_p_1,sideskirt.4x2_p_2,sideskirt.4x2_p_v8,sideskirt.4x2_p_v8_1,sideskirt.4x2_p_v8_2
+Sideskirt (6x2) = sideskirt.6x2_p,sideskirt.6x2_p_1,sideskirt.6x2_p_2,sideskirt.6x2_p_v8,sideskirt.6x2_p_v8_1,sideskirt.6x2_p_v8_2
+Sideskirt (6x2 long) = sideskirt.6x2l_p,sideskirt.6x2l_p_1,sideskirt.6x2l_p_2,sideskirt.6x2l_p_v8,sideskirt.6x2l_p_v8_1,sideskirt.6x2l_p_v8_2
+Front mudflap = f_mudflap.kotr,f_mudflap.kotrh,f_mudflap.kotrl,f_mudflap.scania,f_mudflap.scaniah,f_mudflap.scanial,f_mudflap.scaniamg,f_mudflap.scaniamgh,f_mudflap.scaniamgl,f_mudflap.v8,f_mudflap.v8h,f_mudflap.v8l
+Rear bumper = r_bumper.duty_p,r_bumper.mg01,r_bumper.mg03,r_bumper.mg04,r_bumper.stock_p
+Chassis cover = r_chs_cover.4x2_p,r_chs_cover.6xn_p,r_chs_cover.6xnl_p
+Rear fender = r_fender.4x2_blk_p,r_fender.4x2_p,r_fender.4x2_spcgr_p,r_fender.6x2_blk_p,r_fender.6x2_p,r_fender.6x2_spcgr_p,r_fender.6x2l_blk_p,r_fender.6x2l_p,r_fender.6x2l_spcgr_p
 
 [Scania S 2016]
-accessory_exhaust = exhaust_m.mg01
-accessory_painted_logo = f_logo.painted
-accessory_mirrors = f_mirror.painted,mirror.painted,mirror.painted_f,s_mirror.painted
-accessory_sunshield = sunshld.stock,sunshld.sunshld_01,sunshld.sunshld_04,sunshld.sunshld_05,sunshld.sunshld_06
-accessory_sideskirt_4x2 = sideskirt.4x2_p,sideskirt.4x2_p_1,sideskirt.4x2_p_2,sideskirt.4x2_p_v8,sideskirt.4x2_p_v8_1,sideskirt.4x2_p_v8_2
-accessory_sideskirt_6x2 = sideskirt.6x2_p,sideskirt.6x2_p_1,sideskirt.6x2_p_2,sideskirt.6x2_p_v8,sideskirt.6x2_p_v8_1,sideskirt.6x2_p_v8_2
-accessory_sideskirt_6x2l = sideskirt.6x2l_p,sideskirt.6x2l_p_1,sideskirt.6x2l_p_2,sideskirt.6x2l_p_v8,sideskirt.6x2l_p_v8_1,sideskirt.6x2l_p_v8_2
-accessory_front_mudflap = f_mudflap.kotr,f_mudflap.kotrh,f_mudflap.kotrl,f_mudflap.scania,f_mudflap.scaniah,f_mudflap.scanial,f_mudflap.scaniamg,f_mudflap.scaniamgh,f_mudflap.scaniamgl,f_mudflap.v8,f_mudflap.v8h,f_mudflap.v8l
-accessory_rear_bumper = r_bumper.duty_p,r_bumper.mg01,r_bumper.mg03,r_bumper.mg04,r_bumper.stock_p
-accessory_chassis_cover = r_chs_cover.4x2_p,r_chs_cover.6xn_p,r_chs_cover.6xnl_p
-accessory_rear_fender = r_fender.4x2_blk_p,r_fender.4x2_p,r_fender.4x2_spcgr_p,r_fender.6x2_blk_p,r_fender.6x2_p,r_fender.6x2_spcgr_p,r_fender.6x2l_blk_p,r_fender.6x2l_p,r_fender.6x2l_spcgr_p
+Exhaust = exhaust_m.mg01
+Painted logo = f_logo.painted
+Mirrors = f_mirror.painted,mirror.painted,mirror.painted_f,s_mirror.painted
+Sunshield = sunshld.stock,sunshld.sunshld_01,sunshld.sunshld_04,sunshld.sunshld_05,sunshld.sunshld_06
+Sideskirt (4x2) = sideskirt.4x2_p,sideskirt.4x2_p_1,sideskirt.4x2_p_2,sideskirt.4x2_p_v8,sideskirt.4x2_p_v8_1,sideskirt.4x2_p_v8_2
+Sideskirt (6x2) = sideskirt.6x2_p,sideskirt.6x2_p_1,sideskirt.6x2_p_2,sideskirt.6x2_p_v8,sideskirt.6x2_p_v8_1,sideskirt.6x2_p_v8_2
+Sideskirt (6x2 long) = sideskirt.6x2l_p,sideskirt.6x2l_p_1,sideskirt.6x2l_p_2,sideskirt.6x2l_p_v8,sideskirt.6x2l_p_v8_1,sideskirt.6x2l_p_v8_2
+Front mudflap = f_mudflap.kotr,f_mudflap.kotrh,f_mudflap.kotrl,f_mudflap.scania,f_mudflap.scaniah,f_mudflap.scanial,f_mudflap.scaniamg,f_mudflap.scaniamgh,f_mudflap.scaniamgl,f_mudflap.v8,f_mudflap.v8h,f_mudflap.v8l
+Rear bumper = r_bumper.duty_p,r_bumper.mg01,r_bumper.mg03,r_bumper.mg04,r_bumper.stock_p
+Chassis cover = r_chs_cover.4x2_p,r_chs_cover.6xn_p,r_chs_cover.6xnl_p
+Rear fender = r_fender.4x2_blk_p,r_fender.4x2_p,r_fender.4x2_spcgr_p,r_fender.6x2_blk_p,r_fender.6x2_p,r_fender.6x2_spcgr_p,r_fender.6x2l_blk_p,r_fender.6x2l_p,r_fender.6x2l_spcgr_p
+
