Rewrite choose_cabins()
The choose_cabins function started neat but slowly became more and more
bloated as more and more use cases were added. I've therefore rewritten
it so everything is shared (instead of chunks of code being duplicated,
and weaving in and out of each other with odd if statements) and the
internal_name doesn't need to be changed if editing a truck.

Also added and changed many files as part of testing a truck list and a
DAF paintjob.

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [Params]
-truck_list = ATS Support Test List
-all_truck_lists = ATS Support Test List,Globex ETS 2 Paintjob Pack,Globex ATS Paintjob Pack
+truck_list = Globby blow bl
+all_truck_lists = ATS Support Test List,Globex ETS 2 Paintjob Pack,Globex ATS Paintjob Pack,Globby blow bl
 
