Add ATS trailer database information
The placeholder entries in database.ini have been replaced by the two
actual trailers found in the game. It appears as though all parts of a
trailer are accessories, so accessories.ini has been updated as well.

Trailer accessories are a bit cumbersome, so I've temporarily grouped
them just to ensure the program's functionality, but I definitely want
to implement a better solution in the future, possibly with different
groups of accessories (so you could assign all side guards at once, or
each individually, for example).

--- a/database.ini
+++ b/database.ini
@@ -245,8 +245,17 @@ new_truck_format = false
 vehicle_type = euro trailer
 
 # American trailers
-[Rocky Mountain Oyster Double]
+[ATS SCS Box Trailer]
 vehicle_type = american trailer
+make = scs
+model = box
+new_truck_format = true
+
+[ATS SCS Flatbed Trailer]
+vehicle_type = american trailer
+make = scs
+model = flatbed
+new_truck_format = true
 
 # Euro truck mod
 [EuroMans Scania T]
