--- a/truck lists/manual.ini
+++ b/truck lists/manual.ini
@@ -4,14 +4,15 @@ price = 6000
 unlock_level = 0
 pack_version = v1
 pack_author = Paintjob Packer
-list_type = euro
+list_type = american
 internal_name = paint_packer
-database_name = DAF XF 105
-make = daf
-model = xf
-cabins = super_s_cab,s_cab_plus,space_cab
+database_name = ATS SCS Box Trailer
+make = scs
+model = box
+cabins = exclusive,standard,duty
 cabin_numbers = 1,2,3
-new_truck_format = false
-accessory_name_list = shared_white,shared_blue,shared_grey
-accessory_dict = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=0,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
+new_truck_format = true
+vehicle_type = american trailer
+accessory_name_list = shared_blue,shared_grey,shared_white
+accessory_dict = dry van body=0,insulated body=0,reefer body=0,front units=2,trailer rear=2,guards=1
 
