Fix crash when generating any paintjob
When rewriting the paintjob generation functions in 2b7fa55, a critical
folder-creating line was removed, causing the program to crash when
trying to generate its .tobj files. This has been replaced and updated
for trailer support.

--- a/truck lists/manual.ini
+++ b/truck lists/manual.ini
@@ -4,15 +4,15 @@ price = 6000
 unlock_level = 0
 pack_version = v1
 pack_author = Paintjob Packer
-list_type = american
+list_type = euro
 internal_name = paint_packer
-database_name = ATS SCS Box Trailer
-make = scs
-model = box
-cabins = exclusive,standard,duty
+database_name = DAF XF Euro 6
+make = daf
+model = xf_euro6
+cabins = superspace,space_spoiler,space
 cabin_numbers = 1,2,3
-new_truck_format = true
-vehicle_type = american trailer
+new_truck_format = false
+vehicle_type = euro
 accessory_name_list = shared_blue,shared_grey,shared_white
 accessory_dict = dry van body=0,insulated body=0,reefer body=0,front units=2,trailer rear=2,guards=1
 
