Adjust direction of project after much testing
The main reason why I started this project was so that I could make
paintjobs easily myself, and I figured if I documented it and prettied
it up others could use it as well. A few things have changed since then.

1. The program isn't needed
I realised that after the initial generation of files, the program is
essentially unneeded. I generated a paintjob pack, unzipped the
outputted file, and did the rest of my paintjob creation without ever
opening the program again. Even when adding new trucks, trailers, mods
and entire paintjob packs I never found the need to run Paintjob Packer
again.

2. The program doesn't function as intended
When I first started making trucksim mods a few years ago, the modding
scene was very different compared to how it is now, and the mods
themselves worked differently. In order to test out a paintjob, you had
to compile a mod into a .scs file and relaunch your game. Just recently
I found out (to much joy) that a folder now "works" as a mod, no need to
constantly re-compile. In fact, .scs files aren't needed at all any
more. Steam Workshop paintjobs (which weren't a thing when I started)
don't require compiling at all, and can in fact stay in folders.

3. The program isn't usable by anyone else
While it has a technically functional CLI, Paintjob Packer is definitely
not user-friendly, and it probably won't ever be unless adapted to use a
GUI. The target audience (trucksim players who don't know how to make
paintjobs) likely won't be able to use a CLI-based program efficiently.
Add to the fact that manual paintjobs aren't needed (no need to always
re-compile mods) and paintjob packs aren't really either (no need to
re-generate after the initial output), and a complete rewrite seems in
order.

Where does Paintjob Packer go from here?
It'll either morph into a GUI program or a web-based paintjob generator,
acting just like ETS2Studio. This project probably won't b

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [Params]
-truck_list = Globby blow bl
-all_truck_lists = ATS Support Test List,Globex ETS 2 Paintjob Pack,Globex ATS Paintjob Pack,Globby blow bl
+truck_list = Globex ETS 2 Paintjob Pack
+all_truck_lists = ATS Support Test List,Globex ATS Paintjob Pack,Globex Logo Lineup Pack,Globex ATS Logo Lineup Pack,Globex ETS 2 Paintjob Pack
 
