--- a/truck lists/Globex ETS 2 Paintjob Pack.ini
+++ b/truck lists/Globex ETS 2 Paintjob Pack.ini
@@ -1,16 +1,25 @@
 [Params]
+list_type = euro
 ingame_name = Globex Paintjob
 price = 6000
 unlock_level = 0
-pack_version = v0.9
+pack_version = v1
 pack_author = Carsmaniac
-list_type = euro
 
 [glo_da_xf]
 database_name = DAF XF 105
 make = daf
 model = xf
 cabins = super_s_cab,s_cab_plus,space_cab
+cabin_numbers = 1,2,3
+new_truck_format = false
+vehicle_type = euro
+
+[glo_da_eur6]
+database_name = DAF XF Euro 6
+make = daf
+model = xf_euro6
+cabins = superspace,space_spoiler,space
 cabin_numbers = 1,2,3
 new_truck_format = false
 vehicle_type = euro
@@ -33,6 +42,15 @@ cabin_numbers = 1,2,3
 new_truck_format = false
 vehicle_type = euro
 
+[glo_mb_ac148]
+database_name = Mercedes Benz New Actros
+make = mercedes
+model = actros2014
+cabins = gs_8x4
+cabin_numbers = 8x4
+new_truck_format = false
+vehicle_type = euro
+
 [glo_vo_fh09]
 database_name = Volvo FH16 2009
 make = volvo
@@ -43,11 +61,20 @@ new_truck_format = false
 vehicle_type = euro
 
 [glo_vo_fh12]
-database_name = Volvo FH15 2012
+database_name = Volvo FH16 2012
 make = volvo
 model = fh16_2012
 cabins = l2h3,l2h2,l2h1
 cabin_numbers = 1,2,3
+new_truck_format = false
+vehicle_type = euro
+
+[glo_vo_fh128]
+database_name = Volvo FH16 2012
+make = volvo
+model = fh16_2012
+cabins = l2h3_8x4
+cabin_numbers = 8x4
 new_truck_format = false
 vehicle_type = euro
 
@@ -88,7 +115,7 @@ new_truck_format = false
 vehicle_type = euro
 
 [glo_iv_hiwa]
-database_name = Iveco Stralis Hi Way
+database_name = Iveco Hi Way
 make = iveco
 model = hiway
 cabins = hiway
@@ -105,6 +132,15 @@ cabin_numbers = 1,2,3
 new_truck_format = false
 vehicle_type = euro
 
+[glo_sc_r128]
+database_name = Scania R 2012
+make = scania
+model = r
+cabins = tl_8x4
+cabin_numbers = 8x4
+new_truck_format = false
+vehicle_type = euro
+
 [glo_sc_strm]
 database_name = Scania Streamline
 make = scania
@@ -114,33 +150,12 @@ cabin_numbers = 1,2,3
 new_truck_format = false
 vehicle_type = euro
 
-[glo_sc_r16]
-database_name = Scania R 2016
+[glo_sc_strm8]
+database_name = Scania Streamline
 make = scania
-model = r_2016
-cabins = highline,normal
-cabin_numbers = 1,2
-new_truck_format = true
-vehicle_type = euro
-accessory_name_list = shared_white,shared_blue,shared_grey
-accessory_dict = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=1,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
-
-[glo_sc_s16]
-database_name = Scania S 2016
-make = scania
-model = s_2016
-cabins = highline,normal
-cabin_numbers = 1,2
-new_truck_format = true
-vehicle_type = euro
-accessory_name_list = shared_white,shared_blue,shared_grey
-accessory_dict = accessory_exhaust=1,accessory_painted_logo=0,accessory_mirrors=1,accessory_sunshield=1,accessory_sideskirt_4x2=2,accessory_sideskirt_6x2=2,accessory_sideskirt_6x2l=2,accessory_front_mudflap=2,accessory_rear_bumper=2,accessory_chassis_cover=2,accessory_rear_fender=2
-
-[glo_da_eur6]
-database_name = DAF XF Euro 6
-make = daf
-model = xf_euro6
-cabins = superspace,space_spoiler,space
-cabin_numbers = 1,2,3
+model = streamline
+cabins = tl_8x4
+cabin_numbers = 8x4
 new_truck_format = false
 vehicle_type = euro
+
