--- a/truck lists/manual.ini
+++ b/truck lists/manual.ini
@@ -5,14 +5,14 @@ unlock_level = 0
 pack_version = v1
 pack_author = Paintjob Packer
 list_type = euro
-internal_name = paint_packer
-database_name = DAF XF Euro 6
-make = daf
-model = xf_euro6
-cabins = superspace,space_spoiler,space
-cabin_numbers = 1,2,3
-new_truck_format = false
+internal_name = paint_pack2
+database_name = Scania R 2016
+make = scania
+model = r_2016
+cabins = highline,normal
+cabin_numbers = 1,2
+new_truck_format = true
 vehicle_type = euro
-accessory_name_list = shared_blue,shared_grey,shared_white
-accessory_dict = dry van body=0,insulated body=0,reefer body=0,front units=2,trailer rear=2,guards=1
+accessory_name_list = shared_grey,shared_blue
+accessory_dict = exhaust=1,painted logo=1,mirrors=1,sunshield=1,sideskirt (4x2)=0,sideskirt (6x2)=0,sideskirt (6x2 long)=0,front mudflap=0,rear bumper=0,chassis cover=0,rear fender=0
 
