--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ paintjob_new.py
 __pycache__/paintjob.cpython-37.pyc
 *.pyc
 *.dds
+*.jpg
+input/Globex ATS Logo Lineup Pack/mod_description.txt
+input/Globex ATS Logo Lineup Pack/snoop.txt
+input/Globex ETS 2 Paintjob Pack/mod_description.txt
+input/Globex ETS 2 Paintjob Pack/snoop.txt
+input/Globex Logo Lineup Pack/mod_description.txt
+input/Globex Logo Lineup Pack/snoop.txt
+*.dds
+truck lists/Globex ATS Logo Lineup Pack.ini
+truck lists/Globex ETS 2 Paintjob Pack.ini
+truck lists/Globex Logo Lineup Pack.ini
