Add common mod and paintjob files
Program now generates files that are mod-specific (manifest.sii and
mod_manager_image.jpg) and paintjob-specific (icon files). All other
files including those in /def and /vehicle are dependent on the vehicles
within each paintjob, and will be implemented next.

--- a/new pack.ini
+++ b/new pack.ini
@@ -1,22 +1,20 @@
 [pack info]
-name: 
+game: ets
+name: SOmething Paintjob Pack
 version: v1.0
-game: 
-paintjobs: 
-main paintjob: 
+paintjobs: yes
+main paintjob: yes
 related mods: 
 link: 
-suggested by: 
-description: 
-more info: 
+description: does the thing
+more info: indeed
+suggested by: bob
 
-[main]
-name: 
+[yes]
+name: Yesss
 price: 6000
 main colour: white
 scania r
-scania streamline
-man tgx
 
 #[secondary]
 #name: 
