Populate ETS 2 vehicle database
All ETS 2 vehicle files have been converted over to the new configparser
format, including all SCS trucks & trailers, and some mods. Testing is
required to ensure there were no entry errors, and all of the mods are
appropriately tagged with veh_trailer and veh_separate_paintjobs.

--- a/new pack.ini
+++ b/new pack.ini
@@ -11,10 +11,13 @@ more info: indeed
 suggested by: bob
 
 [yes]
-name: Yesss
+name: Yasss
 price: 6000
-main colour: white
+main colour: green
 scania r
+scania streamline
+volvo fh16
+scs box
 
 #[secondary]
 #name: 
