Create classes for packs, paintjobs and vehicles
Moving from loose variables to objects should help make the program more
modular, making it easier to pass information to each variable. I was
originally going to create read_pack_ini etc functions, but building
file reading into each class's __init__ is much cleaner, and there isn't
a situation where I'd need to create an instance of them without reading
from a file.

A few variables were also renamed to avoid confusion. Mod link > link,
description > brief desc (for when description-making functions are
implemented), related mods > related packs.

--- a/new pack.ini
+++ b/new pack.ini
@@ -4,11 +4,10 @@ name: SOmething Paintjob Pack
 version: v1.0
 paintjobs: yes
 main paintjob: yes
-related mods: 
+related packs: 
 link: 
 description: does the thing
 more info: indeed
-suggested by: bob
 
 [yes]
 name: Yasss
@@ -23,7 +22,6 @@ scs box
 #name: 
 #price: 6050
 #main colour: 
-#all vehicles: false
 
-#[related mod]
+#[related pack]
 #description: 
