--- a/new pack.ini
+++ b/new pack.ini
@@ -1,7 +1,7 @@
 [pack info]
 game: ets
 name: SOmething Paintjob Pack
-version: v1.0
+version: 1
 paintjobs: yes
 main paintjob: yes
 related packs: 
