Correct typos and add some print statements
Fixed a few typos; a string wasn't closed correctly in main .sii files
of vehicles without separate paintjobs, "accessory" was misspelled in
the icon .tobj, and there was an extra colon in the Profi Liner HD .ini.

Also spaced out paintjob.py a little, and added console output for each
pack, paintjob and vehicle created in make new pack.py.

--- a/new pack.ini
+++ b/new pack.ini
@@ -1,22 +1,20 @@
+# all lists separated,by,commas
 [pack info]
 game: ets
-name: SOmething Paintjob Pack
+name: PPacker Test Pack
 version: 1
-paintjobs: yes
-main paintjob: yes
+paintjobs: packer
+main paintjob: packer
 related packs: 
 link: 
-description: does the thing
-more info: indeed
+description: A pack to test the packer
+more info: This pack is not bad
 
-[yes]
-name: Yasss
+[packer]
+name: Packer Test Paintjob
 price: 6000
-main colour: green
-scania r
-scania streamline
-volvo fh16
-scs box
+main colour: white
+daf xf_euro6daf xfiveco hiwayiveco straliskrone boxlinerkrone coollinerkrone drylinerkrone profilinerkrone profilinerhdman tgx_euro6man tgxmercedes actrosmercedes actros2014renault magnumrenault premiumrenault tscania r_2016scania rscania s_2016scania streamlineschwmuller curtainschwmuller reeferschwmuller slidepostscs boxscs flatbedscs gooseneckscs logvolvo fh16_2012volvo fh16
 
 #[secondary]
 #name: 
