Make pack in paintjob.py, and add pack to database
Pack generation has moved from make new pack.py to make_pack in
paintjob.py, so it can be reused for generating existing packs. The
new pack is also now saved to the database, with a check to make sure it
doesn't already exist.

--- a/new pack.ini
+++ b/new pack.ini
@@ -1,20 +1,19 @@
 # all lists separated,by,commas
 [pack info]
-game: ets
-name: PPacker Test Pack
+game: 
+name: Paintjob Pack
 version: 1
-paintjobs: packer
-main paintjob: packer
+paintjobs: 
+main paintjob: 
 related packs: 
 link: 
-description: A pack to test the packer
-more info: This pack is not bad
+description: 
+more info: 
 
-[packer]
-name: Packer Test Paintjob
+[main]
+name: Paintjob
 price: 6000
-main colour: white
-daf xf_euro6daf xfiveco hiwayiveco straliskrone boxlinerkrone coollinerkrone drylinerkrone profilinerkrone profilinerhdman tgx_euro6man tgxmercedes actrosmercedes actros2014renault magnumrenault premiumrenault tscania r_2016scania rscania s_2016scania streamlineschwmuller curtainschwmuller reeferschwmuller slidepostscs boxscs flatbedscs gooseneckscs logvolvo fh16_2012volvo fh16
+main colour: 
 
 #[secondary]
 #name: 
